# price-tracker-mcp

./: README.md  amazon_debug.html  cb_debug.html  claude_desktop_config.json  debug_search.py  debug_server_logic.py  inspect_ml.py  inspect_price.py  inspect_title.py  magalu_debug.html  ml_dump.html  pyproject.toml  requirements.txt
src/price_tracker_mcp/: __init__.py  server.py
