[project]
name = "price-tracker-mcp"
version = "1.0.0"
description = "Servidor MCP para buscar lavadoras e secadoras pelos menores preços"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0"
]

[project.scripts]
price-tracker-mcp = "price_tracker_mcp.server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
